--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <!-- header -->
     <header class="header fixed">
       <div class="main-content">
         <div class="body-header">
@@ -43,5 +44,86 @@
         </div>
       </div>
     </header>
+
+    <!-- main content -->
+    <div class="main">
+      <div class="hero">
+        <div class="main-content">
+          <div class="main-body">
+            <!-- hero left -->
+            <div class="media-block">
+              <img
+                class="img"
+                src="./assets/img/hero-img.jpg"
+                alt="Learn without limits and spread knowledge."
+              />
+              <div class="hero-summary">
+                <div class="item">
+                  <div class="icon">
+                    <img
+                      src="./assets/icon/Orion-page-icon.svg"
+                      alt="UI/UX Design"
+                    />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon">
+                    <img
+                      src="./assets/icon/Orion-code-window-icon.svg"
+                      alt="Development"
+                    />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">Development</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon">
+                    <img
+                      src="./assets/icon/Orion-megaphone-icon.svg"
+                      alt="Marketing"
+                    />
+                  </div>
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="title">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- hero light -->
+            <div class="content-block">
+              <h1 class="heading">
+                Learn without limits and spread knowledge.
+              </h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+
+              <div class="cta-group">
+                <a href="#!" class="btn">See Courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="./assets/icon/play.svg" alt="" />
+                  </div>
+                  <span class="watch-text">Watch Video</span>
+                </button>
+              </div>
+              <p class="desc">Recent engagement</p>
+              <p class="desc strong">
+                <strong>50K</strong> Students <strong>70+</strong> Courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
