--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     <!-- main content -->
     <div class="main">
+      <!-- Hero -->
       <div class="hero">
         <div class="main-content">
           <div class="main-body">
@@ -120,6 +121,176 @@
               <p class="desc strong">
                 <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- popular -->
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <!-- popular left -->
+            <div class="info">
+              <h2 class="heading-lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+
+            <!-- popular right -->
+            <div class="controls">
+              <button class="controls-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="controls-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+          <div class="course-list">
+            <!-- item 1 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img src="./assets/img/aliaksei.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp break-all"
+                      >Basic web design</a
+                    >
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- item 2 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img src="./assets/img/jasmin.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp break-all">UI/UX design</a>
+                  </h3>
+                  <rating>
+                    <img src="./assets/icon/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </rating>
+                </div>
+                <p class="desc line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- item 3 -->
+            <div class="course-item">
+              <a href="#!">
+                <img src="./assets/img/melody.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp break-all">Web App design</a>
+                  </h3>
+                  <rating>
+                    <img src="./assets/icon/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </rating>
+                </div>
+                <p class="desc line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- feedback -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img src="./assets/img/ava2.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quotes.svg"
+                  alt="open-quotes"
+                  class="open-quotes"
+                />
+                <div class="block-quotes">
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </div>
+              </div>
             </div>
           </div>
         </div>
