HTML to Figma 13/12/2023

--- a/index.html
+++ b/index.html
@@ -264,6 +264,37 @@
       <div class="feedback">
         <div class="main-content">
           <div class="feedback-list">
+            <!-- item 1 -->
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img src="./assets/img/ava1.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quotes.svg"
+                  alt="open-quotes"
+                  class="open-quotes"
+                />
+                <div class="block-quotes">
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </div>
+              </div>
+            </div>
+
+            <!-- item 2 -->
             <div class="feedback-item">
               <!-- khối bên trái -->
               <div class="info">
@@ -291,6 +322,64 @@
                   skills I've learned."
                 </div>
               </div>
+            </div>
+
+            <!-- item 3 -->
+            <div class="feedback-item">
+              <!-- khối bên trái -->
+              <div class="info">
+                <img src="./assets/img/ava3.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                </div>
+              </div>
+
+              <!-- khối bên phải -->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quotes.svg"
+                  alt="open-quotes"
+                  class="open-quotes"
+                />
+                <div class="block-quotes">
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- features -->
+      <div class="features">
+        <div class="main-content">
+          <div class="features-body">
+            <div class="images">
+              <img
+                class="lower"
+                src="./assets/img/learn1.jpg"
+                alt="Learn one"
+              />
+              <img src="./assets/img/learn2.jpg" alt="Learn two" />
+            </div>
+            <div class="content">
+              <h2 class="heading-lv2">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
+              <p class="desc">Lesson Impact Report (2022)</p>
+              <a href="" class="btn cta-btn">Sign In</a>
             </div>
           </div>
         </div>
