HTML to Figma End 13/12/2023

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </div>
       </div>
 
-      <!-- features -->
+      <!-- features 1-->
       <div class="features">
         <div class="main-content">
           <div class="features-body">
@@ -384,6 +384,279 @@
           </div>
         </div>
       </div>
+
+      <!-- features 2 -->
+      <div class="features features-2nd">
+        <div class="main-content">
+          <div class="features-body">
+            <div class="content">
+              <h2 class="heading-lv2">
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </h2>
+              <p class="desc">
+                Take the next step toward. Join now to receive personalized and
+                more recommendations from the full Coursera catalog.
+              </p>
+              <a href="" class="btn cta-btn">Join Now</a>
+            </div>
+            <div class="images">
+              <img
+                class="lower"
+                src="./assets/img/learn3.jpg"
+                alt="Learn one"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- blog -->
+      <div class="blogs">
+        <div class="main-content">
+          <div class="blog-top">
+            <h2 class="heading-lv2">Our blog</h2>
+            <p class="desc">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+          </div>
+
+          <div class="blog-list">
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study1.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study2.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study3.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study1.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study2.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study3.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study1.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study2.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!"
+                ><img src="./assets/img/study3.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <a href="#!"
+                  ><h3 class="title">
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3></a
+                >
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot active"></span>
+            <span class="dot"></span>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="main-content">
+        <div class="row">
+          <!-- column 1 -->
+          <div class="column">
+            <img src="./assets/icon/Lesson..svg" alt="Lesson." class="logo" />
+            <p class="desc">
+              Need to help for your dream Career? trust us. With Lesson, study
+              becomes a lot easier with us.
+            </p>
+            <div class="socials">
+              <a href="">
+                <img src="./assets/icon/twitter.svg" alt="" class="icon" />
+              </a>
+              <a href="">
+                <img src="./assets/icon/fb.svg" alt="" class="icon" />
+              </a>
+              <a href="">
+                <img src="./assets/icon/linked.svg" alt="" class="icon" />
+              </a>
+              <a href="">
+                <img src="./assets/icon/instagram.svg" alt="" class="icon" />
+              </a>
+            </div>
+          </div>
+
+          <!-- column 2 -->
+          <div class="column">
+            <h3 class="title">Company</h3>
+            <ul class="list">
+              <li>
+                <a href="#!">About Us</a>
+              </li>
+              <li>
+                <a href="#!">Features</a>
+              </li>
+              <li>
+                <a href="#!">Our Pricing</a>
+              </li>
+              <li>
+                <a href="#!">Latest News</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- column 3 -->
+          <div class="column">
+            <h3 class="title">Support</h3>
+            <ul class="list">
+              <li>
+                <a href="#!">FAQ's</a>
+              </li>
+              <li>
+                <a href="#!">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="#!">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#!">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- column 4 -->
+          <div class="column">
+            <h3 class="title">Address</h3>
+            <ul class="list">
+              <li>
+                <a href="#!"
+                  ><strong>Location:</strong> 27 Division St, New York, NY
+                  10002, USA</a
+                >
+              </li>
+              <li>
+                <a href="#!"><strong>Email:</strong> email@gmail.com</a>
+              </li>
+              <li>
+                <a href="#!"><strong>Phone:</strong> + 000 1234 567 890</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="copy-right">
+          <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
